--- a/airpollutionweb/css/airpollutionDataUpdate.css
+++ b/airpollutionweb/css/airpollutionDataUpdate.css
@@ -48,8 +48,10 @@ div#content {
     text-align: center;
 }
 
-
-
+.conter {
+    text-align: center;
+    margin: 0 auto;
+}
 
 input[type=text]:focus {
     color: blue;
